kubernetes/apps/the-redemption/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redemption
  labels:
    app.kubernetes.io/name: redemption
    app.kubernetes.io/managed-by: argocd
    environment: production
